manifests/ingress-controller.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: k8s-simple-ingress-controller
  labels:
    app: ingress-controller
spec:
  selector:
    matchLabels:
      app: ingress-controller
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: k8s-simple-ingress-controller
      containers:
        - name: k8s-simple-ingress-controller
          image: cnych/k8s-simple-ingress-controller:v0.1
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
