manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
spec:
  rules:
    - host: who.qikqiak.com
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami
              servicePort: 80
